--- a/IMDB.Web/Areas/Admin/Views/Movie/Add.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/Movie/Add.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Add";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-    <div class="container">
+    <div class="container color" >
         <form action="" method="post" enctype="multipart/form-data">
             <div id="alert" class="alert alert-success" style="visibility:hidden">
                 Film Eklendi
