--- a/IMDB.Web/Areas/Admin/Views/Movie/Edit.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/Movie/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <h4>MovieDTO</h4>
 <hr />
-<div class="container">
+<div class="container color">
     <div class="col-md-4">
         <form asp-action="" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
