--- a/IMDB.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -4,38 +4,40 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-    <div class="row mb-2">
-        @foreach (var item in Model)
-        {
-            <div class="col-md-4">
-                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">Movie</strong>
-                        <h3 class="mb-0">@item.Name</h3>
-                        <div class="mb-1 text-muted">@item.AddedDate</div>
-                        @if (item.Descreption.Length > 50)
+<div class="row mb-2">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4">
+            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-primary">Movie</strong>
+                    <h3 class="mb-0">@item.Name</h3>
+                    <div class="mb-1 text-muted">@item.AddedDate</div>
+                    @if (item.Descreption.Length > 50)
+                    {
+                        <p class="card-text mb-auto">@item.Descreption.Substring(50)...</p>
+                    }
+                    else
+                    {
+                        <p class="card-text mb-auto">@item.Descreption</p>
+                    }
+                    <a asp-action="Details" asp-controller="Movie" asp-route-Id="@item.Id" class="stretched-link">Continue reading</a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    @if (@item.Images.Count != 0)
+                    {
+                        foreach (var item2 in item.Images)
                         {
-                            <p class="card-text mb-auto">@item.Descreption.Substring(50)...</p>
+                            <img src="~/media/movie/@Url.Content(item.Images[0].Path)" style="width:150px; height:150px;">
+                             break;
                         }
-                        else
-                        {
-                            <p class="card-text mb-auto">@item.Descreption</p>
-                        }
-                        <a asp-action="Details" asp-controller="Movie" asp-route-Id="@item.Id" class="stretched-link">Continue reading</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        @if (@item.Images != null)
-                        {
-                            foreach (var item2 in item.Images)
-                            {
-                                    <img src="~/media/movie/@Url.Content(item.Images[0].Path)" style="width:150px; height:150px;">
-                                }
-                            }
-                    </div>
+                       
+                    }
                 </div>
             </div>
-        }
-    </div>
+        </div>
+    }
+</div>
 
 
 
