--- a/IMDB.Web/Areas/Admin/Views/Movie/Edit.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/Movie/Edit.cshtml
@@ -4,97 +4,56 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Edit</h2>
-
-<h4>MovieDTO</h4>
 <hr />
-<div class="container color">
-    <div class="col-md-4">
-        <form asp-action="" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" value="@Model.Movie.Id" id="movieId" />
-            <div id="alert" class="alert alert-success" style="visibility:hidden">Fotoğraf Yüklendi</div>
-            <div id="alert2" class="alert alert-success" style="visibility:hidden">Film Güncellendi</div>
-            <div class="form-group">
-                <label asp-for="Movie.Name" class="control-label"></label>
-                <input asp-for="Movie.Name" class="form-control" id="name" />
-                <span asp-validation-for="Movie.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Movie.Descreption" class="control-label"></label>
-                <input asp-for="Movie.Descreption" class="form-control" id="descreption" />
-                <span asp-validation-for="Movie.Descreption" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Movie.CategoryId" class="control-label">Kategori Seçiniz</label>
-                <select asp-for="Movie.CategoryId" class="control-label">
-                    @foreach (var item in Model.Categories)
-                    {
-                        <option id="categoryId" value="@item.Id">@item.Name</option>
-                    }
-                </select>
-            </div>
-            <h6 class="bg-info p-1 text-white">Add to @Model.Movie.Name</h6>
-            <table class="table table-bordered table-sm">
-                @if (Model.Movie.NonMember.Count() == 0)
-                {
-                    <tr>
-                        <td colspan="2">All User Are Member</td>
-                    </tr>
-                }
-
-                else
-                {
-                    @foreach (var user in Model.Movie.NonMember)
-                    {
-                        <tr>
-                            <td>@user.UserName</td>
-                            <td>
-                                <input type="checkbox" name="IdToAdd" value="@user.Id" id="IdToAdd" />
-                            </td>
-                        </tr>
-                    }
-                }
-
-            </table>
-
-            <h6 class="bg-info p-1 text-white">Delete to @Model.Movie.Name</h6>
-            <table class="table table-bordered table-sm">
-                @if (Model.Movie.Member.Count() == 0)
-                {
-                    <tr>
-                        <td colspan="2">No User Are Member</td>
-                    </tr>
-                }
-
-                else
-                {
-                    @foreach (var user in Model.Movie.Member)
-                    {
-                        <tr>
-                            <td>@user.UserName</td>
-                            <td>
-                                <input type="checkbox" name="IdToDelete" value="@user.Id" id="idToAdd" />
-                            </td>
-                        </tr>
-                    }
-                }
-
-            </table>
-            <div class="form-group">
-                <input type="file" id="files" name="files" multiple formenctype="multipart/form-data" />
-                <input type="button" class="btn btn-primary" id="gonder" value="Kaydet" />
-            </div>
-        </form>
-       
-       
-        
+<div id="alert" class="alert alert-success" style="visibility:hidden">Fotoğraf Yüklendi</div>
+<div id="alert2" class="alert alert-success" style="visibility:hidden">Film Güncellendi</div>
+<form asp-action="" method="post" enctype="multipart/form-data">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" value="@Model.Movie.Id" id="movieId" />
+    <div class="form-group col-md-4">
+        <label asp-for="Movie.Name" class="control-label"></label>
+        <input asp-for="Movie.Name" class="form-control" id="name" />
+        <span asp-validation-for="Movie.Name" class="text-danger"></span>
     </div>
-</div>
-
+    <div class="form-group col-md-8">
+        <label asp-for="Movie.Descreption" class="control-label"></label>
+        <input asp-for="Movie.Descreption" class="form-control" id="descreption" />
+        <span asp-validation-for="Movie.Descreption" class="text-danger"></span>
+    </div>
+    <div class="form-group col-md-6">
+        <label for="categoryName" class="control-label">Kategori Seçiniz</label>
+        <select name="categoryName" id="categoryName" class="form-control">
+            @foreach (var item in Model.Categories)
+            {
+                <option>@item.Name</option>
+            }
+        </select>
+    </div>
+    <h6 class="bg-info p-1 text-white col-md-4">Add to @Model.Movie.Name</h6>
+    <div class="form-group col-md-4">
+        @if (Model.Movie.NonMember.Count() == 0)
+        {
+            <span class="text-danger"> All User Are Member</span>
+        }
+        else
+        {
+            <label for="IdToAdd" class="control-label">Kullanıcı Seçiniz</label>
+            <select name="IdToAdd" id="IdToAdd" class="form-control" multiple>
+                @foreach (var item in Model.Movie.NonMember)
+                {
+                    <option value="@item.Id">@item.UserName</option>
+                }
+            </select>
+        }
+    </div>
+    <div class="form-group">
+        <input class="col-md-8" type="file" id="files" name="files" multiple formenctype="multipart/form-data" /><hr />
+        <input type="button" class="btn btn-primary" id="gonder" value="Kaydet" multiple />
+    </div>
+</form>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List">Back to List</a>
 </div>
 
 @section Scripts{
@@ -118,16 +77,17 @@
         $("#files").on('filebatchuploadcomplete', function () {
             $("#alert").css({ "visibility": "visible" });
         });
+         document.getElementById("IdToAdd").multiple = true;
         document.querySelector("#gonder").addEventListener('click', gonder);
         function gonder() {
             var name = $("#name").val();
-            var categoryId = $("#categoryId").val();
+            var categoryName = $("#categoryName").val();
             var descreption = $("#descreption").val();
             var IdToAdd = $("#IdToAdd").val();
             var Id = $("#movieId").val();
             $.ajax({
                 dataType: 'JSON',
-                data: { "name": name, "categoryId": categoryId, "descreption": descreption, "IdToAdd": IdToAdd, "Id": Id },
+                data: { "name": name, "categoryName": categoryName, "descreption": descreption, "IdToAdd": IdToAdd, "Id": Id },
                 type: 'POST',
                 url: "/Admin/Movie/Edit",
                  success: function () {
@@ -135,6 +95,6 @@
                 }
             });
         };
-    
+
     </script>
 }
