--- a/IMDB.Web/Views/Auth/Register.cshtml
+++ b/IMDB.Web/Views/Auth/Register.cshtml
@@ -1,58 +1,40 @@
 ﻿@model IMDB.Infrastructure.VM.RegisterVM
-@{
-    ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<div class="register-box">
-    <div class="register-logo">
-        <a href="../../index2.html"><b>Admin</b>LTE</a>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container register-form">
+    <div class="form">
+        <div class="text-center">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png" style="width:500px;height:80px;" />
+        </div><hr />
+              <form asp-action="Register" method="post">
+                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                  <div class="form-content">
+                      <div class="row">
+                          <div class="col-md-6">
+                              <div class="form-group">
+                                  <input asp-for="FirstName" class="form-control" placeholder="Your Name *" />
+                              </div>
+                              <div class="form-group">
+                                  <input type="text" asp-for="LastName" class="form-control" placeholder="Last Name *" />
+                              </div>
+                              <div class="form-group">
+                                  <input type="password" asp-for="Password" class="form-control" placeholder="Password *" />
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="form-group">
+                                  <input type="text" asp-for="UserName" class="form-control" placeholder="User Name *" />
+                              </div>
+                              <div class="form-group">
+                                  <input type="email" asp-for="Email" class="form-control" placeholder="E mail *" />
+                              </div>
+                          </div>
+                      </div>
+                      <button type="button" class="btnSubmit">Submit</button>
+                  </div>
+              </form>
     </div>
-    <div class="register-box-body">
-        <p class="login-box-msg">Register a new membership</p>
-        <form asp-action="Register" method="post">
-            <div class="form-group has-feedback">
-                <input asp-for="FirstName" class="form-control" placeholder="Full name">
-                <span asp-validation-for="FirstName" class="glyphicon glyphicon-user form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input asp-for="LastName" class="form-control" placeholder="Last Name">
-                <span asp-validation-for="LastName" class="glyphicon glyphicon-envelope form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input asp-for="Email" class="form-control" placeholder="Email">
-                <span asp-validation-for="Email" class="glyphicon glyphicon-lock form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input asp-for="UserName" class="form-control" placeholder="User Name">
-                <span asp-validation-for="UserName" class="glyphicon glyphicon-log-in form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="password" asp-for="Password" class="form-control" placeholder="Password">
-                <span asp-validation-for="Password" class="glyphicon glyphicon-log-in form-control-feedback"></span>
-            </div>
-            <div class="col-xs-8">
-                <div class="checkbox icheck">
-                    <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms</a>
-                    </label>
-                    <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-        <div class="social-auth-links text-center">
-            <p>- OR -</p>
-            <a href="#" class="btn btn-block btn-social btn-facebook btn-flat">
-                <i class="fa fa-facebook"></i> Sign up using
-                Facebook
-            </a>
-            <a href="#" class="btn btn-block btn-social btn-google btn-flat">
-                <i class="fa fa-google-plus"></i> Sign up using
-                Google+
-            </a>
-        </div>
-        <a href="login.html" class="text-center">I already have a membership</a>
-    </div>
-    <!-- /.form-box -->
 </div>
