--- a/IMDB.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using IMDB.Web
+﻿@using X.PagedList.Mvc.Core;
+@using X.PagedList;
+@using X.PagedList.Mvc.Core.Common;
+@using IMDB.Web
 @using IMDB.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
